--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,23 @@
    border-bottom: 1px sold lightgray;
    background-color: white;
    padding: 10px;
+   display: flex;
+   justify-content: space-between;
+
 }
 .App{
   background-color: #fafafa;
   height: 100vh;
 }
-
+.app-header{
+  display: flex;
+  background-color: white;
+  object-fit: contain;
+  padding: 20px;
+  border-bottom: 1px solid lightgray;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
 .app_sign{
   display: flex;
   flex-direction: column;
